--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,7 @@
     },
     "extends": [
         "eslint:recommended",
-        "prettier",
-        "plugin:@typescript-eslint/recommended",
-        "prettier/@typescript-eslint"
+        "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -17,7 +15,8 @@
     "rules": {
         "indent": [
             "error",
-            4
+            4,
+            { "SwitchCase": 1 }
         ],
         "linebreak-style": [
             "error",
@@ -27,10 +26,6 @@
             "error",
             "double"
         ],
-        "semi": [
-            "error",
-            "always"
-        ],
         "prefer-const": [
             "error"
         ],
@@ -38,10 +33,11 @@
             "error",
             "always"
         ],
+        "semi": "off",
+        "@typescript-eslint/semi": ["error"],
         "no-trailing-spaces": "error",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/ban-types": "off",
         "@typescript-eslint/no-var-requires": "off"
     }
 }
-
